@@ -1,3 +1,8 @@
+2013-06-20  Miklos Szeredi <miklos@szeredi.hu>
+
+	* libfuse: fix multiple close of device fd.  Reported by Dan
+	Greenfield
+
 2013-03-19  Miklos Szeredi <miklos@szeredi.hu>
 
 	* libfuse: fix thread cancel race.  Exiting a worker my race with
